extracted-yamls/deployment-optimized-baseline-nvidia-gpu-vllm-decode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
  labels:
    llm-d.ai/accelerator-variant: gpu
    llm-d.ai/accelerator-vendor: nvidia
    llm-d.ai/guide: optimized-baseline
    llm-d.ai/model: Qwen3-32B
    llm-d.ai/role: decode
  name: optimized-baseline-nvidia-gpu-vllm-decode
  namespace: llm-d-optimized-baseline
spec:
  progressDeadlineSeconds: 600
  replicas: 8
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      llm-d.ai/accelerator-variant: gpu
      llm-d.ai/accelerator-vendor: nvidia
      llm-d.ai/guide: optimized-baseline
      llm-d.ai/model: Qwen3-32B
      llm-d.ai/role: decode
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        autopilot.gke.io/selector-toleration: '{"inputTolerations":[{"key":"kubernetes.io/arch","operator":"Equal","value":"amd64","effect":"NoSchedule"}],"outputTolerations":[{"key":"kubernetes.io/arch","operator":"Equal","value":"amd64","effect":"NoSchedule"},{"key":"cloud.google.com/gke-spot","operator":"Equal","value":"true","effect":"NoSchedule"}],"modified":true}'
      labels:
        llm-d.ai/accelerator-variant: gpu
        llm-d.ai/accelerator-vendor: nvidia
        llm-d.ai/guide: optimized-baseline
        llm-d.ai/model: Qwen3-32B
        llm-d.ai/role: decode
    spec:
      containers:
      - args:
        - Qwen/Qwen3-4B
        - --disable-access-log-for-endpoints=/health,/metrics,/v1/models
        - --tensor-parallel-size=1
        - --gpu-memory-utilization=0.95
        command:
        - vllm
        - serve
        image: vllm/vllm-openai:v0.19.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: modelserver
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: modelserver
        ports:
        - containerPort: 8000
          name: modelserver
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /v1/models
            port: modelserver
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: '16'
            memory: 128Gi
            nvidia.com/gpu: '1'
          requests:
            cpu: '8'
            memory: 24Gi
            nvidia.com/gpu: '1'
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        startupProbe:
          failureThreshold: 120
          httpGet:
            path: /v1/models
            port: modelserver
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /dev/shm
          name: shm
        - mountPath: /.cache
          name: torch-compile-cache
        - mountPath: /.triton
          name: triton-cache
        - mountPath: /.config
          name: vllm-config
      dnsPolicy: ClusterFirst
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
        cloud.google.com/gke-accelerator-count: '1'
        cloud.google.com/gke-spot: 'true'
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: optimized-baseline-nvidia-gpu-vllm-sa
      serviceAccountName: optimized-baseline-nvidia-gpu-vllm-sa
      terminationGracePeriodSeconds: 25
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
      - effect: NoSchedule
        key: cloud.google.com/gke-spot
        operator: Equal
        value: 'true'
      - effect: NoSchedule
        key: cloud.google.com/gke-accelerator
        operator: Equal
        value: nvidia-l4
      - effect: NoSchedule
        key: cloud.google.com/machine-family
        operator: Exists
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 20Gi
        name: shm
      - emptyDir: {}
        name: torch-compile-cache
      - emptyDir: {}
        name: triton-cache
      - emptyDir: {}
        name: vllm-config
