extracted-yamls/service-optimized-baseline-epp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: optimized-baseline-epp
    app.kubernetes.io/version: v1.5.0
  name: optimized-baseline-epp
  namespace: llm-d-optimized-baseline
spec:
  ports:
  - name: grpc-ext-proc
    port: 9002
    protocol: TCP
    targetPort: 9002
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    inferencepool: optimized-baseline-epp
  sessionAffinity: None
  type: ClusterIP
